// Distributed under the MIT software license, see the accompanying
// file LICENSE or http://www.opensource.org/licenses/mit-license.php.

syntax = "proto3";

option go_package = "github.com/theQRL/zond/protos";

package protos;

import "protos/transaction.proto";

message AddressBalance {
    bytes address = 1;
    uint64 balance = 2;
}

message PreState {
    repeated Transaction transactions = 1;
    repeated AddressBalance address_balance = 2;
}